# optson

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  _version.py  conda-env-basic.yml  conda-env-tutorials.yml  pyproject.toml  setup.py
ci/: Dockerfile-ci  Dockerfile-ci-jax  Dockerfile-ci-jax-pytorch  Dockerfile-ci-salvus-deps  Dockerfile-ci-torch  build-ci.sh  conda-env.yml  push-ci.sh  test-commons.sh  test.sh
docs/: Makefile  conf.py  index.md  installation.md  make_docs.sh  tutorial.md
docs/jupytext_notebooks/: 01_basics.py  02_himmelblau.py  03_mini_batch_regression.py
docs/outdated_notebooks/2D_salvus_inverse/: 2D_Salvus.py
optson/: _version.py  batch_manager.py  call_counter.py  gradient_test.py  hessian.py  ls.py  model.py  monitor.py  optimizer.py  preconditioner.py  problem.py  scalar_optimizer.py  stopping_criterion.py  tr.py  update.py  utils.py  vector.py
optson/methods/: __init__.py  adam.py  quasi_newton.py  steepest_descent.py  trust_region.py
optson/problems/: __init__.py  himmelblau.py  regression_problem.py  rosenbrock.py  simple_quadratic.py
tests/: test_adam.py  test_batch_manager.py  test_call_counter.py  test_jax.py  test_model.py  test_notebooks.py  test_optimizer.py  test_preconditioner.py  test_torch.py
